# lyra

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  correct.md  index.html  package-lock.json  package.json  project_overview.md  report.md  social-preview.html  style_guidelines.md  tailwind.config.ts  tutorial_spec.md  vite.config.ts  vitest.config.ts
.claude/: settings.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-149dafb13e5c4616b8b625c78b81f3edb0d8562233ac3eef5a12c26735152f39.json  query-18fd3bc451df48c5b8b3d33d8208a6dee6d27437ff9117212d0e302c6b8b9e67.json  query-2455862b928f073d1b1b0fd578b438114c6a0188b1bd637ea35971e2e57442f1.json  query-442adc63c448f64b56749814f2885506e3986990d1b4a2504bb000e268078e97.json  query-4acfb06affe5a65976956ca6f66b2397bb28dc277accb74a37b609691f42ec9d.json  query-9d2c3ed73093138fe7c229fed3fd6aca326594ab7db5ddc81a222302206c74a0.json  query-c7ab94e720166bede139a425868ab49ff3fbff4cce77a6807c0556116399aaa0.json  query-fbda42c356cee0c8c4cc45a337039aa469d93b5da9ef2500f9bada20d74fb39b.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 002_add_mood_language.sql
src-tauri/src/: error.rs  lib.rs  main.rs  test_utils.rs
src-tauri/src/commands/: comment.rs  config.rs  debug.rs  diff.rs  export.rs  mod.rs  section.rs  snapshot.rs  song.rs  vault.rs
src-tauri/src/core/: comment.rs  config.rs  diff.rs  export.rs  index.rs  mod.rs  section.rs  snapshot.rs  song.rs  utils.rs  vault.rs
src-tauri/src/migrations/: 001_initial.sql
(+114 files in other folders)
