[package]
name = "lyra"
version = "0.2.0-1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lyra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }
ulid = "1"
similar = "3"
notify = "6"
zip = "8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
once_cell = "1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-opener = "2"
dirs = "6.0.0"
sanitize-filename = "0.6.0"

[dev-dependencies]
tempfile = "3"

